bin/tests/errors/parser/parser_err_empty_var_decl.swg
#global fileprivate

const B 0 // swc-expected-error {{parser_err_empty_var_decl}}
